--- a/app/views/admins/shops/discarded.html.erb
+++ b/app/views/admins/shops/discarded.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-4 mobile-gutter p-3">
   <div class="d-flex justify-content-between mb-4 mobile-block">
-    <h3 class="fw-bold">削除済み店舗一覧</h3>
+    <h3 class="fw-bold"><%= link_to '削除済み店舗一覧', discarded_admins_shops_path, class: 'text-dark text-decoration-none' %></h3>
     <%= search_form_for @q, url: discarded_admins_shops_path, class: 'form-inline' do |f| %>
       <div class="d-flex mobile-block">
         <div class="input-group">
