--- a/app/views/admins/articles/_form.html.erb
+++ b/app/views/admins/articles/_form.html.erb
@@ -28,12 +28,10 @@
 
 
 <div class="mb-4">
-  <%= f.fields_for :contents do |c| %>
     <articlecontents-component
-      data-props="<%= { body: c.object.body, article_images: c.object.article_images, article_images_cache: c.object.article_images_cache, object: c.object, attribute: 'body',body_error_message: "内容を入力してください" }.to_json %>"
+      data-props="<%= { contents: f.object.contents, body_error_message: "内容を入力してください" }.to_json %>"
     >
     </articlecontents-component>
-  <% end %>
 </div>
 
 <% if f.object.new_record? %>
