--- a/app/views/admins/articles/index.html.erb
+++ b/app/views/admins/articles/index.html.erb
@@ -1,6 +1,14 @@
 <div class="container mt-4 mobile-gutter p-3">
   <div class="d-flex justify-content-between mb-4 mobile-block">
     <h3 class="fw-bold"><%= link_to 'ブログ一覧', admins_articles_path, class: 'text-dark text-decoration-none' %></h3>
+    <%= search_form_for @q, url: admins_articles_path, class: 'form-inline' do |f| %>
+      <div class="input-group">
+        <%= f.search_field :title_cont, class: 'form-control', placeholder: 'タイトルで検索' %>
+        <div class="input-group-append">
+          <%= f.submit '検索', class: 'btn btn-primary' %>
+        </div>
+      </div>
+    <% end %>
   </div>
   <%= render "admins/shared/flashes" %>
   <div class="table-responsive">
