update/ヘッダーから不要になったアカウント編集画面へのリンクを削除して、propsを利用し、ログインしている管理者の権限と名前を表示

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
   <body>
     <% if admin_signed_in? %>
       <%= vite_javascript_tag 'Application.tsx' %>
-      <app-component>
+      <app-component data-props="<%= { currentAdminName: current_admin.name, currentAdminRole: current_admin.role_text }.to_json %>">
         <%= yield %>
       </app-component>
     <% else %>
