--- a/app/views/admins/admin_users/index.html.erb
+++ b/app/views/admins/admin_users/index.html.erb
@@ -1,6 +1,15 @@
 <div class="container mt-4 mobile-gutter p-3">
   <div class="d-flex justify-content-between mb-4 mobile-block">
     <h3 class="fw-bold"><%= link_to '管理者一覧', admins_admin_users_path, class: 'text-dark text-decoration-none' %></h3>
+    <%= search_form_for @q, url: admins_admin_users_path, class: 'form-inline' do |f| %>
+      <div class="input-group">
+        <%= f.select :role_eq, Admin.role.values.collect(&:text), { include_blank: '全ての権限' }, class: 'me-4' %>
+        <%= f.search_field :name_cont, class: 'form-control', placeholder: '名前で検索' %>
+        <div class="input-group-append">
+          <%= f.submit '検索', class: 'btn btn-primary' %>
+        </div>
+      </div>
+    <% end %>
   </div>
   <%= render "admins/shared/flashes" %>
   <div class="table-responsive">
