--- a/app/views/admins/admin_users/index.html.erb
+++ b/app/views/admins/admin_users/index.html.erb
@@ -3,7 +3,7 @@
     <h3 class="fw-bold"><%= link_to '管理者一覧', admins_admin_users_path, class: 'text-dark text-decoration-none' %></h3>
     <%= search_form_for @q, url: admins_admin_users_path, class: 'form-inline' do |f| %>
       <div class="input-group">
-        <%= f.select :role_eq, Admin.role.values.collect(&:text), { include_blank: '全ての権限' }, class: 'me-4' %>
+        <%= f.select :role_eq, Admin.role.values.collect(&:text), { include_blank: '全ての権限' }, class: 'form-select-sm me-4' %>
         <%= f.search_field :name_cont, class: 'form-control', placeholder: '名前で検索' %>
         <div class="input-group-append">
           <%= f.submit '検索', class: 'btn btn-primary' %>
