update/articleモデルの一覧画面で、セレクトボックスで、カテゴリー別のソートができるように設定

--- a/app/views/admins/articles/index.html.erb
+++ b/app/views/admins/articles/index.html.erb
@@ -3,6 +3,7 @@
     <h3 class="fw-bold"><%= link_to 'ブログ一覧', admins_articles_path, class: 'text-dark text-decoration-none' %></h3>
     <%= search_form_for @q, url: admins_articles_path, class: 'form-inline' do |f| %>
       <div class="input-group">
+        <%= f.select :category_eq, Article.category.values.collect(&:text), { include_blank: '全てのカテゴリー' }, class: 'form-select-sm me-4' %>
         <%= f.search_field :title_cont, class: 'form-control', placeholder: 'タイトルで検索' %>
         <div class="input-group-append">
           <%= f.submit '検索', class: 'btn btn-primary' %>
