update/エラーメッセージの表示をlayouts/_error_messages.html.erbをrenderで表示するのからhelperを使ったエラーメッセージの方法に変更

--- a/app/views/admins/articles/_form.html.erb
+++ b/app/views/admins/articles/_form.html.erb
@@ -2,36 +2,35 @@
   <%= f.label :category, class: "form-label" %>
   <span class="badge rounded-pill text-bg-danger">必須</span>
   <%= f.select :category, Article.category.options, { prompt: '選択してください' }, { selected: f.object.category, class: 'form-select' } %>
-  <%= render "layouts/error_messages", object: f.object, attribute: :category %>
+  <%= show_error_messages(f.object, :category) %>
 </div>
 
 <div class="mb-4">
   <%= f.label :title, class: "form-label" %>
   <span class="badge rounded-pill text-bg-danger">必須</span>
   <%= f.text_field :title, class: 'form-control', value: f.object.title, placeholder: "社員旅行など" %>
-  <%= render "layouts/error_messages", object: f.object, attribute: :title %>
+  <%= show_error_messages(f.object, :title) %>
 </div>
 
 <div class="mb-4">
   <%= f.label :start_at, class: "form-label" %>
   <span class="badge rounded-pill text-bg-danger">必須</span>
   <%= f.datetime_field :start_at, class: 'form-control', **@start_at_options, value: f.object.start_at&.strftime("%Y-%m-%dT%H:%M") %>
-  <%= render "layouts/error_messages", object: f.object, attribute: :start_at %>
+  <%= show_error_messages(f.object, :start_at) %>
 </div>
 
 <div class="mb-4">
   <%= f.label :end_at, class: "form-label" %>
   <span class="badge rounded-pill text-bg-danger">必須</span>
   <%= f.datetime_field :end_at, class: 'form-control', **@end_at_options, value: f.object.end_at&.strftime("%Y-%m-%dT%H:%M") %>
-  <%= render "layouts/error_messages", object: f.object, attribute: :end_at %>
+  <%= show_error_messages(f.object, :end_at) %>
 </div>
 
-
 <div class="mb-4">
-    <articlecontents-component
-      data-props="<%= { contents: f.object.contents, body_error_message: "内容を入力してください" }.to_json %>"
-    >
-    </articlecontents-component>
+  <articlecontents-component
+    data-props="<%= { contents: f.object.contents, body_error_message: "内容を入力してください" }.to_json %>"
+  >
+  </articlecontents-component>
 </div>
 
 <% if f.object.new_record? %>
