--- a/app/views/admins/admin_users/_form.html.erb
+++ b/app/views/admins/admin_users/_form.html.erb
@@ -6,37 +6,36 @@
   <% else %>
     <%= f.select :role, (f.object.role.owner? ? @fixed_role_owner_options : Admin.role.options.reject { |_, value| value == 'owner' }), { prompt: '選択してください' }, { selected: f.object.role, class: 'form-select' } %>
   <% end %>
-  <%= render "layouts/error_messages", object: f.object, attribute: :role %>
+  <%= show_error_messages(f.object, :role) %>
 </div>
 
 <div class="mb-4">
   <%= f.label :name, class: "form-label mt-3" %>
   <span class="badge rounded-pill text-bg-danger">必須</span>
   <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control", placeholder: "食べ物太郎" %>
-  <%= render "layouts/error_messages", object: f.object, attribute: :name %>
+  <%= show_error_messages(f.object, :name) %>
 </div>
 
 <div class="mb-4">
   <%= f.label :email, class: "form-label mt-3" %>
   <span class="badge rounded-pill text-bg-danger">必須</span>
   <%= f.email_field :email, autocomplete: "email", class: "form-control", placeholder: "mail@example.com" %>
-  <%= render "layouts/error_messages", object: f.object, attribute: :email %>
+  <%= show_error_messages(f.object, :email) %>
 </div>
 
 <div class="mb-4">
   <%= f.label :password, class: "form-label mt-3" %>
   <span class="badge rounded-pill text-bg-danger">必須</span>
   <%= f.password_field :password, class: "form-control", placeholder: "半角英数6文字以上" %>
-  <%= render "layouts/error_messages", object: f.object, attribute: :password %>
+  <%= show_error_messages(f.object, :password) %>
 </div>
 
 <div class="mb-4">
   <%= f.label :password_confirmation, class: "form-label mt-3" %>
   <span class="badge rounded-pill text-bg-danger">必須</span>
   <%= f.password_field :password_confirmation, class: "form-control", placeholder: "半角英数6文字以上" %>
-  <%= render "layouts/error_messages", object: f.object, attribute: :password_confirmation %>
+  <%= show_error_messages(f.object, :password_confirmation) %>
 </div>
-
 
 <% if f.object.new_record? %>
   <div class="mt-5">
