--- a/app/views/admins/admin_users/show.html.erb
+++ b/app/views/admins/admin_users/show.html.erb
@@ -4,24 +4,24 @@
     <div class="card-body p-5 mx-5">
       <h2 class="mb-4 text-center fw-bold"><%= @admin_user.name %>の詳細情報</h2>
       
-      <div class="border-bottom pt-3 mb-3">
-        <h3 class="ml-2">役割</h3>
-        <p class="text-center"><%= @admin_user.role_text %></p>
+      <div class="border-bottom pt-5 mb-3">
+        <h4 style="margin-left: 50px;">役割</h4>
+        <h3 class="text-center"><%= @admin_user.role_text %></h3>
       </div>
       
-      <div class="border-bottom pt-3 mb-3">
-        <h3 class="">名前</h3>
-        <p class="text-center"><%= @admin_user.name %></p>
+      <div class="border-bottom pt-5 mb-3">
+        <h4 style="margin-left: 50px;">名前</h4>
+        <h3 class="text-center"><%= @admin_user.name %></h3>
       </div>
       
-      <div class="border-bottom pt-3 mb-3">
-        <h3 class="">メールアドレス</h3>
-        <p class="text-center"><%= @admin_user.email %></p>
+      <div class="border-bottom pt-5 mb-3">
+        <h4 style="margin-left: 50px;">メールアドレス</h4>
+        <h3 class="text-center"><%= @admin_user.email %></h3>
       </div>
       
-      <div class="pt-3 mb-3">
-        <h3 class="">パスワード</h3>
-        <p class="text-center">******</p>
+      <div class="pt-5 mb-3">
+        <h4 style="margin-left: 50px;">パスワード</h4>
+        <h3 class="text-center">******</h3>
       </div>
       
       <div class="mt-5">
