update/contactモデルのstatusカラムに日本語を対応状況に変更し、それに伴い一覧画面の日本語も変更

--- a/app/views/admins/contacts/index.html.erb
+++ b/app/views/admins/contacts/index.html.erb
@@ -12,7 +12,7 @@
           <th>お名前</th>
           <th>折り返し希望の有無</th>
           <th>連絡方法</th>
-          <th>問い合わせステータス</th>
+          <th>対応状況</th>
           <th>対応管理者</th>
           <th>更新時間</th>
         </tr>
