update/gratel-gemで作成したパンくずリストを各種画面で表示できるように共通ファイルに設定

--- a/app/frontend/entrypoints/main.scss
+++ b/app/frontend/entrypoints/main.scss
@@ -143,3 +143,9 @@ em {
     padding: 1rem;
   }
 }
+
+.custom-breadcrumb {
+  background-color: #e9ecef;
+  border-radius: 0.25rem;
+  padding: 0.5rem 1rem;
+}
