--- a/app/frontend/entrypoints/main.scss
+++ b/app/frontend/entrypoints/main.scss
@@ -146,6 +146,7 @@ em {
 
 .custom-breadcrumb {
   background-color: #e9ecef;
+  color: #6c757d;
   border-radius: 0.25rem;
   padding: 0.5rem 1rem;
 }
