--- a/app/views/admins/admin_users/index.html.erb
+++ b/app/views/admins/admin_users/index.html.erb
@@ -1,3 +1,4 @@
+<% breadcrumb :admins_admin_users %>
 <div class="d-flex justify-content-between mb-4 mobile-block">
   <h3 class="fw-bold"><%= link_to '管理者一覧', admins_admin_users_path, class: 'text-dark text-decoration-none' %></h3>
   <%= search_form_for @q, url: admins_admin_users_path, class: 'form-inline' do |f| %>
