--- a/app/views/admins/admin_users/show.html.erb
+++ b/app/views/admins/admin_users/show.html.erb
@@ -1,3 +1,4 @@
+<% breadcrumb :admins_admin_user, @admin_user %>
 <%= render "admins/shared/flashes" %>
 <div class="card col-sm-9 mx-auto mt-5">
   <div class="card-body p-5 mx-5">
