update/お知らせの各種ファイルにパンくずリストを作成し、breadcrumbs.rbで設定

--- a/app/views/admins/news/edit.html.erb
+++ b/app/views/admins/news/edit.html.erb
@@ -1,3 +1,4 @@
+<% breadcrumb :edit_admins_news %>
 <%= render "admins/shared/flashes" %>
 <div class="card col-sm-9 mx-auto mt-5 mobile-card-border">
   <div class="card-body">
