--- a/app/views/admins/news/index.html.erb
+++ b/app/views/admins/news/index.html.erb
@@ -1,4 +1,4 @@
-
+<% breadcrumb :admins_news_index %>
 <div class="d-flex justify-content-between mb-4 mobile-block">
   <h3 class="fw-bold"><%= link_to 'お知らせ一覧', admins_news_index_path, class: 'text-dark text-decoration-none' %></h3>
   <%= search_form_for @q, url: admins_news_index_path, class: 'form-inline' do |f| %>
