update/店舗管理の各種ファイルにパンくずリストを作成し、breadcrumbs.rbで設定

--- a/app/views/admins/shops/discarded.html.erb
+++ b/app/views/admins/shops/discarded.html.erb
@@ -1,3 +1,4 @@
+<% breadcrumb :discarded_admins_shops %>
 <div class="d-flex justify-content-between mb-4 mobile-block">
   <h3 class="fw-bold"><%= link_to '削除済み店舗一覧', discarded_admins_shops_path, class: 'text-dark text-decoration-none' %></h3>
   <%= search_form_for @q, url: discarded_admins_shops_path, class: 'form-inline' do |f| %>
