--- a/app/views/admins/shops/index.html.erb
+++ b/app/views/admins/shops/index.html.erb
@@ -1,3 +1,4 @@
+<% breadcrumb :admins_shops %>
 <div class="d-flex justify-content-between mb-4 mobile-block">
   <h3 class="fw-bold"><%= link_to '店舗一覧', admins_shops_path, class: 'text-dark text-decoration-none' %></h3>
   <%= search_form_for @q, url: admins_shops_path, class: 'form-inline' do |f| %>
