update/店舗一覧から開く詳細画面と削除した店舗一覧から開く詳細画面では親が異なるため、それぞれ設定

--- a/app/views/admins/shops/show.html.erb
+++ b/app/views/admins/shops/show.html.erb
@@ -1,4 +1,8 @@
-<% breadcrumb :admins_shop, @shop %>
+<% if @is_discarded %>
+  <% breadcrumb :admins_shop_discarded, @shop %>
+<% else %>
+  <% breadcrumb :admins_shop, @shop %>
+<% end %>
 <%= render "admins/shared/flashes" %>
 <div class="card col-sm-9 mx-auto mt-5 d-flex">
   <div class="card-body p-5">
