--- a/app/views/admins/contacts/index.html.erb
+++ b/app/views/admins/contacts/index.html.erb
@@ -1,3 +1,4 @@
+<% breadcrumb :admins_contacts %>
 <div class="d-flex justify-content-between mb-4 mobile-block">
   <h3 class="fw-bold"><%= link_to '問い合わせ一覧', admins_contacts_path, class: 'text-dark text-decoration-none' %></h3>
   <%= search_form_for @q, url: admins_contacts_path, class: 'form-inline' do |f| %>
