--- a/app/views/admins/shops/edit.html.erb
+++ b/app/views/admins/shops/edit.html.erb
@@ -1,4 +1,4 @@
-<% breadcrumb :edit_admins_shops %>
+<% breadcrumb :edit_admins_shop %>
 <%= render "admins/shared/flashes" %>
 <div class="card col-sm-9 mx-auto mt-5 mobile-card-border">
   <div class="card-body">
