--- a/app/views/admins/home/show.html.erb
+++ b/app/views/admins/home/show.html.erb
@@ -7,8 +7,8 @@
       <h5 class="card-header">問い合わせ</h5>
       <div class="card-body">
         <h5 class="card-title">問い合わせ件数：<%= @total_contacts %>件</h5>
-        
-        <%= link_to '確認する', admins_contacts_path(q: {search_by_status: :not_started}), class: 'btn btn-primary' %>
+        <p class="card-text">公開画面へのリンク(仮)</p>
+        <p class="card-text">本日の問い合わせ件数:<%= @total_contacts_created_today %></p>
       </div>
     </div>
   </div>
@@ -17,8 +17,8 @@
       <h5 class="card-header">応募</h5>
       <div class="card-body">
         <h5 class="card-title">応募件数：件</h5>
-        
-        <%= link_to '確認する', admins_contacts_path(q: {search_by_status: :not_started}), class: 'btn btn-primary mt-auto' %>
+        <p class="card-text">公開画面へのリンク(仮)</p>
+        <p class="card-text">本日の応募件数:</p>
       </div>
     </div>
   </div>
@@ -27,7 +27,7 @@
       <h5 class="card-header">店舗</h5>
       <div class="card-body">
         <h5 class="card-title">店舗数：<%= @total_contacts %>店舗</h5>
-        
+        <p class="card-text">公開画面へのリンク(仮)</p>
       </div>
     </div>
   </div>
@@ -36,7 +36,7 @@
       <h5 class="card-header">お知らせ</h5>
       <div class="card-body">
         <h5 class="card-title">お知らせ件数：<%= @total_news %>件</h5>
-        
+        <p class="card-text">公開画面へのリンク(仮)</p>
       </div>
     </div>
   </div>
