--- a/app/views/admins/home/show.html.erb
+++ b/app/views/admins/home/show.html.erb
@@ -9,6 +9,8 @@
         <h5 class="card-title">問い合わせ件数：<%= @total_contacts %>件</h5>
         <p class="card-text">公開画面へのリンク(仮)</p>
         <p class="card-text">本日の問い合わせ件数:<%= @total_contacts_created_today %></p>
+        <p class="card-text  text-danger">未対応の問い合わせは<%= @total_contacts_with_not_started %>件です</p>
+        <%= link_to '確認する', admins_contacts_path(q: {search_by_status: :not_started}), class: 'btn btn-primary' %>
       </div>
     </div>
   </div>
@@ -19,6 +21,8 @@
         <h5 class="card-title">応募件数：件</h5>
         <p class="card-text">公開画面へのリンク(仮)</p>
         <p class="card-text">本日の応募件数:</p>
+        <p class="card-text  text-danger">未対応の応募は件です</p>
+        <%= link_to '確認する', admins_contacts_path(q: {search_by_status: :not_started}), class: 'btn btn-primary' %>
       </div>
     </div>
   </div>
