update/job_entryモデルの詳細画面で、recruit_typeの表示方法を変更

--- a/app/views/admins/job_entries/show.html.erb
+++ b/app/views/admins/job_entries/show.html.erb
@@ -6,7 +6,7 @@
       <%= @job_entry.name %>(<%= @job_entry.name_kana %>)様の問い合わせ詳細
     </h2>
     <div class="text-center mb-4">
-      <h5><%= @job_entry.recruit_type_text %></h5>
+      <h5><%= @job_entry.recruit_type_text %>希望</h5>
     </div>
     <div class="d-flex justify-content-between flex-wrap">
       <div class="col-md-5 mb-4">
