update/管理画面のトップ画面の応募管理cardで応募総数を表示できるように作成し、controllerでsizeを利用して変数を作成

--- a/app/views/admins/home/show.html.erb
+++ b/app/views/admins/home/show.html.erb
@@ -41,7 +41,7 @@
     <div class="card h-100">
       <h5 class="card-header">応募</h5>
       <div class="card-body">
-        <h5 class="card-title">応募件数：件</h5>
+        <h5 class="card-title">応募件数：<%= @total_job_entries %>件</h5>
         <p class="card-text">公開画面へのリンク(仮)</p>
         <p class="card-text  text-danger">未対応の応募は件です</p>
       </div>
