--- a/app/views/admins/home/show.html.erb
+++ b/app/views/admins/home/show.html.erb
@@ -43,10 +43,10 @@
       <div class="card-body">
         <h5 class="card-title">応募件数：<%= @total_job_entries %>件</h5>
         <p class="card-text">公開画面へのリンク(仮)</p>
-        <p class="card-text  text-danger">未対応の応募は件です</p>
+        <p class="card-text  text-danger">未対応の応募は<%= @total_job_entries_with_not_started %>件です</p>
       </div>
       <div class="m-3">
-        <%= link_to '確認する', admins_contacts_path(q: {search_by_status: :not_started}), class: 'btn btn-primary' %>
+        <%= link_to '確認する', admins_job_entries_path(q: {search_by_status: :not_started}), class: 'btn btn-primary' %>
       </div>
     </div>
   </div>
