--- a/app/views/admins/home/show.html.erb
+++ b/app/views/admins/home/show.html.erb
@@ -33,7 +33,7 @@
         <p class="card-text  text-danger">未対応の問い合わせは<%= @total_contacts_with_not_started %>件です</p>
       </div>
       <div class="m-3">
-        <%= link_to '確認する', admins_contacts_path(q: {search_by_status: :not_started}), class: 'btn btn-primary' %>
+        <%= link_to '未対応', admins_contacts_path(q: {search_by_status: :not_started}), class: 'btn btn-primary' %>
       </div>
     </div>
   </div>
@@ -46,7 +46,7 @@
         <p class="card-text  text-danger">未対応の応募は<%= @total_job_entries_with_not_started %>件です</p>
       </div>
       <div class="m-3">
-        <%= link_to '確認する', admins_job_entries_path(q: {search_by_status: :not_started}), class: 'btn btn-primary' %>
+        <%= link_to '未対応', admins_job_entries_path(q: {search_by_status: :not_started}), class: 'btn btn-primary' %>
       </div>
     </div>
   </div>
@@ -66,7 +66,7 @@
       </div>
       <% if @latest_shop %>
         <div class="m-3">
-          <%= link_to '確認する', admins_shop_path(@latest_shop.id), class: 'btn btn-primary' %>
+          <%= link_to '最新', admins_shop_path(@latest_shop.id), class: 'btn btn-primary' %>
         </div>
       <% end %>
     </div>
@@ -87,7 +87,7 @@
       </div>
       <% if @latest_news %>
         <div class="m-3">
-          <%= link_to '確認する', admins_news_path(@latest_news.id), class: 'btn btn-primary' %>
+          <%= link_to '最新', admins_news_path(@latest_news.id), class: 'btn btn-primary' %>
         </div>
       <% end %>
     </div>
