update/article、newsモデルの入力フォームのplaceholderを変更

--- a/app/views/admins/articles/_form.html.erb
+++ b/app/views/admins/articles/_form.html.erb
@@ -8,7 +8,7 @@
 <div class="mb-4">
   <%= f.label :title, class: "form-label" %>
   <span class="badge rounded-pill text-bg-danger">必須</span>
-  <%= f.text_field :title, class: 'form-control', value: f.object.title, placeholder: "社員旅行など" %>
+  <%= f.text_field :title, class: 'form-control', value: f.object.title, placeholder: "タイトルを入力" %>
   <%= show_error_messages(f.object, :title) %>
 </div>
 
