--- a/app/views/admins/home/show.html.erb
+++ b/app/views/admins/home/show.html.erb
@@ -1,6 +1,6 @@
 <% breadcrumb :admins_root %>
 <%= render "admins/shared/flashes" %>
-<div class="d-flex justify-content-between mb-4 mobile-block">
+<div class="d-flex justify-content-between mb-4">
   <h3 class="fw-bold">トップ画面</h3>
   <div class="dropdown ml-auto">
     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -163,7 +163,6 @@
                           <th scope="col">性別</th>
                           <th scope="col">生年月日</th>
                           <th scope="col">住所</th>
-                          <th scope="col">連絡方法</th>
                           <th scope="col">対応状況</th>
                         </tr>
                       </thead>
