update/管理画面のトップ画面で最新の最新の応募と問い合わせを表示する欄のthにcolspanが1のものを追加し、確認ボタンにもthが作用するように変更

--- a/app/views/admins/home/show.html.erb
+++ b/app/views/admins/home/show.html.erb
@@ -108,6 +108,7 @@
                           <th scope="col">折り返し希望の有無</th>
                           <th scope="col">連絡方法</th>
                           <th scope="col">対応状況</th>
+                          <th scope="col" colspan="1"></th>
                         </tr>
                       </thead>
                       <tbody>
@@ -164,6 +165,7 @@
                           <th scope="col">生年月日</th>
                           <th scope="col">住所</th>
                           <th scope="col">対応状況</th>
+                          <th scope="col" colspan="1"></th>
                         </tr>
                       </thead>
                       <tbody>
