--- a/app/frontend/entrypoints/main.scss
+++ b/app/frontend/entrypoints/main.scss
@@ -131,10 +131,17 @@ em {
     --bs-card-border-width: 0
   }
 }
+
 @media (max-width: 576px) {
   .table td, .table th {
     font-size: 8px;
     padding: 8px;
+  }
+}
+
+@media (max-width: 576px) {
+  .mobile-disable-text-end {
+      text-align: initial !important;
   }
 }
 
