update/管理画面のcontact、job_entryモデルの詳細画面で、更新ボタンを押した際確認イベントが起きるように変更

--- a/app/views/admins/contacts/show.html.erb
+++ b/app/views/admins/contacts/show.html.erb
@@ -19,7 +19,7 @@
             <%= f.label :status, "ステータス:" %>
             <%= f.select :status, Contact.status.options, { selected: f.object.status, class: 'form-select' } %>
           </div>
-          <%= f.submit "ステータスを更新", class: "btn btn-primary" %>
+          <%= f.submit "ステータスを更新", class: "btn btn-primary", onclick: "return confirm('ステータスを更新しますか？');" %>
         <% end %>
       </div>
 
