--- a/app/views/admins/job_entries/show.html.erb
+++ b/app/views/admins/job_entries/show.html.erb
@@ -22,7 +22,7 @@
             <%= f.label :status, "ステータス:" %>
             <%= f.select :status, JobEntry.status.options, { selected: f.object.status, class: 'form-select' } %>
           </div>
-          <%= f.submit "ステータスを更新", class: "btn btn-primary" %>
+          <%= f.submit "ステータスを更新", class: "btn btn-primary", onclick: "return confirm('ステータスを更新しますか？');" %>
         <% end %>
       </div>
 
