--- a/app/views/admins/shops/show.html.erb
+++ b/app/views/admins/shops/show.html.erb
@@ -5,7 +5,7 @@
 <% end %>
 <%= render "admins/shared/flashes" %>
 <div class="card col-sm-9 mx-auto mt-5 d-flex">
-  <div class="card-body p-5">
+  <div class="card-body p-5 mobile-p-3">
     <h2 class="mb-5 text-center fw-bold"><%= @shop.name %>の詳細情報</h2>
     <div class="d-flex justify-content-between flex-wrap">
       <div class="col-md-5 mb-4">
