--- a/app/views/admins/admin_users/show.html.erb
+++ b/app/views/admins/admin_users/show.html.erb
@@ -1,26 +1,26 @@
 <% breadcrumb :admins_admin_user, @admin_user %>
 <%= render "admins/shared/flashes" %>
 <div class="card col-sm-9 mx-auto mt-5">
-  <div class="card-body p-5 mx-5">
+  <div class="card-body p-5 mx-5 mobile-p-3 mobile-mx-0">
     <h2 class="mb-4 text-center fw-bold"><%= @admin_user.name %>の詳細情報</h2>
     
     <div class="border-bottom pt-5 mb-3">
-      <h4 style="margin-left: 50px;">役割</h4>
+      <h4 class="mobile-text-center mobile-ml-0" style="margin-left: 50px;"><strong>役割</strong></h4>
       <h3 class="text-center"><%= @admin_user.role_text %></h3>
     </div>
     
     <div class="border-bottom pt-5 mb-3">
-      <h4 style="margin-left: 50px;">名前</h4>
+      <h4 class="mobile-text-center mobile-ml-0" style="margin-left: 50px;"><strong>名前</strong></h4>
       <h3 class="text-center"><%= @admin_user.name %></h3>
     </div>
     
     <div class="border-bottom pt-5 mb-3">
-      <h4 style="margin-left: 50px;">メールアドレス</h4>
+      <h4 class="mobile-text-center mobile-ml-0" style="margin-left: 50px;"><strong>メールアドレス</strong></h4>
       <h3 class="text-center"><%= @admin_user.email %></h3>
     </div>
     
     <div class="pt-5 mb-3">
-      <h4 style="margin-left: 50px;">パスワード</h4>
+      <h4 class="mobile-text-center mobile-ml-0" style="margin-left: 50px;"><strong>パスワード</strong></h4>
       <h3 class="text-center">******</h3>
     </div>
     
