update/作成したヘッダーをrenderで表示

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -22,7 +22,10 @@
     -->
 
   </head>
-  <main class="ml-sm-auto col-lg-10 col-md-9 px-md-4 py-md-4 main-top">
-    <%= yield %>
-  </main>
+  <body>
+    <%= render 'public/shared/header' %>
+    <main class="ml-sm-auto col-lg-10 col-md-9 px-md-4 py-md-4 main-top">
+      <%= yield %>
+    </main>
+  </body>
 </html>
