update/公開画面のmainコンテンツのレイアウトを変更

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -24,7 +24,7 @@
   </head>
   <body>
     <%= render 'public/shared/header' %>
-    <main class="ml-sm-auto col-lg-10 col-md-9 px-md-4 py-md-4 main-top">
+    <main class="main-top">
       <%= yield %>
     </main>
   </body>
